--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -77,7 +77,18 @@ ul {
 }
 
 
-
+/* table examples */
+div.tableSample table {
+	border-collapse:collapse;
+}
+div.tableSample table tr td {
+	border: 1px solid #000;
+	text-align: left;
+	padding:5px;
+}
+div.tableSample th {
+	border: 1px solid #000;
+}
 
 
 
